program gets the names of mounted usb devices and displays them in the popup menu

--- a/Mac Linux USB Loader/Mac Linux USB Loader-Info.plist
+++ b/Mac Linux USB Loader/Mac Linux USB Loader-Info.plist
@@ -20,6 +20,22 @@
 				<string>????</string>
 			</array>
 			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>NSDocumentClass</key>
+			<string>Document</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>dmg</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>DCTemp</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>????</string>
+			</array>
+			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>NSDocumentClass</key>
 			<string>Document</string>
