--- a/Mac Linux USB Loader/Mac Linux USB Loader-Info.plist
+++ b/Mac Linux USB Loader/Mac Linux USB Loader-Info.plist
@@ -9,6 +9,7 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
+				<string>dmg</string>
 				<string>iso</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
@@ -20,25 +21,7 @@
 				<string>????</string>
 			</array>
 			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>NSDocumentClass</key>
-			<string>Document</string>
-		</dict>
-		<dict>
-			<key>CFBundleTypeExtensions</key>
-			<array>
-				<string>dmg</string>
-			</array>
-			<key>CFBundleTypeIconFile</key>
-			<string>Icon</string>
-			<key>CFBundleTypeName</key>
-			<string>DCTemp</string>
-			<key>CFBundleTypeOSTypes</key>
-			<array>
-				<string>????</string>
-			</array>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
+			<string>Viewer</string>
 			<key>NSDocumentClass</key>
 			<string>Document</string>
 		</dict>
@@ -60,11 +43,11 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2012 Ryan Bowring. All rights reserved.</string>
+	<string>Copyright © 2012 SevenBits. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
